[package]
name = "uri-pct"
version = "0.1.0"
authors = ["tony-o <tony.odell@live.com>"]
edition = "2018"
license = "Artistic-2.0"
description = "Percent encode/decode uri components or strs"
readme = "README.md"
repository = "https://github.com/tony-o/rust-uri-pct"
keywords = ["percent", "encode", "web", "uri", "string", "percent-encode", "uri-encode"]
categories = ["web-programming", "encoding", "decoding"]

[dependencies]
